--- a/AniPick.Api/AniPick.Api.csproj
+++ b/AniPick.Api/AniPick.Api.csproj
@@ -7,21 +7,35 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Base.Npgsql" Version="1.0.4" />
+        <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="8.0.3" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.3"/>
+        <PackageReference Include="Microsoft.AspNetCore.Session" Version="2.2.0" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.3" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.3">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.3" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.3">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.2" />
+        <PackageReference Include="StandardRepository.PostgreSQL" Version="1.0.4.5" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
+        <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Areas\Openings\Controllers\" />
-      <Folder Include="Areas\Openings\Models\" />
-      <Folder Include="Areas\Openings\Services\" />
-      <Folder Include="Areas\Users\Controllers\" />
-      <Folder Include="Areas\Users\Models\" />
-      <Folder Include="Areas\Users\Services\" />
-      <Folder Include="Database\Configurations\" />
-      <Folder Include="Database\Models\" />
-      <Folder Include="Migrations\" />
-      <Folder Include="Swagger\" />
+        <Folder Include="Areas\Openings\Controllers\" />
+        <Folder Include="Areas\Openings\Models\" />
+        <Folder Include="Areas\Openings\Services\" />
+        <Folder Include="Areas\Users\Controllers\" />
+        <Folder Include="Areas\Users\Models\" />
+        <Folder Include="Areas\Users\Services\" />
+        <Folder Include="Migrations\" />
+        <Folder Include="Swagger\" />
     </ItemGroup>
 
 </Project>
