--- a/AniPick.Api/AniPick.Api.csproj
+++ b/AniPick.Api/AniPick.Api.csproj
@@ -8,7 +8,10 @@
 
     <ItemGroup>
         <PackageReference Include="Base.Npgsql" Version="1.0.4" />
+        <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+        <PackageReference Include="FluentValidation" Version="11.9.2" />
         <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="8.0.3" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="8.0.3" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.3"/>
         <PackageReference Include="Microsoft.AspNetCore.Session" Version="2.2.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.3" />
@@ -28,14 +31,10 @@
     </ItemGroup>
 
     <ItemGroup>
-        <Folder Include="Areas\Openings\Controllers\" />
+        <Folder Include="Areas\Auth\" />
         <Folder Include="Areas\Openings\Models\" />
-        <Folder Include="Areas\Openings\Services\" />
-        <Folder Include="Areas\Users\Controllers\" />
         <Folder Include="Areas\Users\Models\" />
-        <Folder Include="Areas\Users\Services\" />
         <Folder Include="Migrations\" />
-        <Folder Include="Swagger\" />
     </ItemGroup>
 
 </Project>
