--- a/AniPick.Api/appsettings.json
+++ b/AniPick.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Database": "User Id=postgres.vyhkdujpacpumbjqhwjg;Password=gX637itgXZhv;Server=aws-0-eu-central-1.pooler.supabase.com;Port=6543;Database=postgres;"
+    "Database": "Server=localhost;Port=5432;Database=anipick_db;User ID=anipick_user;Password=fLTC9J2w436M5UjpHyPDFu"
   },
   "Logging": {
     "LogLevel": {
