--- a/AniPick/package.json
+++ b/AniPick/package.json
@@ -31,6 +31,7 @@
     "react-axios": "^2.0.6",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.0",
+    "react-top-loading-bar": "^2.3.1",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
